[package]
name = "user_management"
version = "0.1.0"
edition = "2021"

[dependencies]
active-web = "0.5"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.7"
actix-rt = "2.7.0"
